# cube

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org
src/: main.c
